# This is an automake file for the mpp/domains_include directory of the FMS
# package.

# Ed Hartnett 2/26/19

include_HEADERS = complete_group_update.inc do_check.inc do_checkV.inc do_get_boundary.inc \
                  do_get_boundaryV.inc do_global_field.inc do_global_sum.inc do_pass_sg_to_ug.inc \
                  do_pass_ug_to_sg.inc do_redistribute.inc do_update.inc do_update_nest_coarse.inc \
                  do_update_nest_fine.inc do_updateV.inc mpp_define_nest_domains.inc mpp_domains_comm.inc \
                  mpp_domains_define.inc mpp_domains_misc.inc mpp_domains_util.inc mpp_get_boundary.inc \
                  mpp_global_field.inc mpp_global_reduce.inc mpp_group_update.inc mpp_redistribute.inc \
                  mpp_unstruct_domain.inc mpp_update_domains2D.inc mpp_update_nest_domains.inc \
                  start_group_update.inc update_fold.inc
