# This is an automake file for the mpp/include directory of the FMS
# package.

# Ed Hartnett 2/26/19

include_HEADERS = mpp_alltoall_mpi.h mpp_alltoall_nocomm.h mpp_alltoall_sma.h mpp_chksum.h \
                  mpp_chksum_int.h mpp_chksum_scalar.h mpp_comm.inc mpp_comm_mpi.inc mpp_comm_nocomm.inc \
                  mpp_comm_sma.inc mpp_data_mpi.inc mpp_data_nocomm.inc mpp_data_sma.inc mpp_error_a_a.h \
                  mpp_error_a_s.h mpp_error_s_a.h mpp_error_s_s.h mpp_gather.h mpp_io_connect.inc \
                  mpp_io_misc.inc mpp_io_read.inc mpp_io_unstructured_read.inc mpp_io_unstructured_write.inc \
                  mpp_io_util.inc mpp_io_write.inc mpp_read_2Ddecomp.h mpp_read_compressed.h \
                  mpp_read_distributed_ascii.h mpp_read_distributed_ascii.inc mpp_reduce_mpi.h \
                  mpp_reduce_nocomm.h mpp_reduce_sma.h mpp_scatter.h mpp_sum.inc mpp_sum_mpi.h \
                  mpp_sum_nocomm.h mpp_sum_sma.h mpp_transmit.inc mpp_transmit_mpi.h mpp_transmit_nocomm.h \
                  mpp_transmit_sma.h mpp_type_mpi.h mpp_type_nocomm.h mpp_type_sma.h mpp_util.inc \
                  mpp_util_mpi.inc mpp_util_nocomm.inc mpp_util_sma.inc mpp_write_2Ddecomp.h \
                  mpp_write_compressed.h mpp_write.h mpp_write_unlimited_axis.h system_clock.h
